[tool.poetry]
name = "push_swap_visualizer"
version = "0.1.0"
description = ""
authors = ["Emmanuel Ruaud <em.ruaud@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
